Add fraud detection application with Azure AI integration

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-AZURE_AI_AGENT_PROJECT_CONNECTION_STRING="your_project_connection_string"
-AZURE_AI_AGENT_MODEL_DEPLOYMENT_NAME="your_model_deployment"
+AZURE_AI_AGENT_PROJECT_CONNECTION_STRING="germanywestcentral.api.azureml.ms;dbd89590-b34a-48d6-a71d-c5d18fbbce8a;agentic-fraud-det-rg;agentic-fraud-det"
+AZURE_AI_AGENT_MODEL_DEPLOYMENT_NAME="gpt-4o"
